# clminibench

./: .cproject  .gitignore  .project  AndroidManifest.xml
jni/: Android.mk  CLlib.c  CLlib.h  OpenCL.h  clminibench.cpp  port.c  port.h  xstdint.h
jni/CL/: cl.h  cl.hpp  cl_ext.h
jni/bench/: bench.c  bench.h  inst.h  mem.h
jni/linux/: CMakeLists.txt  cli-app.cpp
jni/npr/: mempool-c.c  mempool.h  strbuf.c  strbuf.h
jni/w32/: CMakeLists.txt  app.manifest  resource.h  resource.rc  w32-app.cpp  w32-app.hpp
res/layout/: activity_main.xml
res/values/: strings.xml
src/jp/main/Int/clminibench/: BenchResult.java  CLminibench.java  MainActivity.java  SelectDeviceDialogFragment.java
